# Predictor-T-

./: .env  .env.template  .gitignore  Dockerfile  Readme.md  docker-compose.yaml  requirements.txt  summary.ipynb
TradingAgent/: agent.py  train_test.py
TradingAgent/src/: Agent.py  Config.py  Database.py  Environment.py  Loader.py  utils.py
TradingAgent/src/dashboard/: Entities.py
TradingAgent/src/llm/research/new-standard-flow-created-at-2023-11-7/: flow.dag.yaml
TradingAgent/src/models/: lstms.py
TradingAgent/src/ui/: fullscreen.py
TradingAgent/tests/: test_main.py
TradingFlow/: agent.py  console.py  hypertune.py  main.py  train_test.py
TradingFlow/src/: Agent.py  Config.py  Database.py  Environment.py  Loader.py  models.py  utils.py
TradingFlow/src/integration/: Cargo.toml  pyproject.toml  text_pyo3.py
TradingFlow/src/integration/src/: lib.rs
TradingFlow/src/memory/: replay.py
TradingFlow/src/models/: dqns.py  txs.py
TradingFlow/src/models/llm/: about.txt
TradingFlow/src/tools/: utils.py
TradingFlow/src/trade/dashboard/: Entities.py
TradingFlow/src/trade/endpoint/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  sendmail.py
TradingFlow/src/ui/: fullscreen.py
TradingFlow/tests/: test_main.py
data/config/: settings.yaml
docs/: ml_flow.drawio  summary.ipynb
docs/notebooks/: summary.ipynb
user_data/config/: settings.yaml
