[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "integration"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
tokio = "1.34.0"
serde_json = "1.0.108"
pyo3-asyncio = { version = "0.19.0", features = ["attributes", "async-std-runtime"] }
async-std = "1.9"

ccxt = { git = "https://github.com/kizzx2/ccxt-rs-lib" }